--- a/index.html
+++ b/index.html
@@ -12,15 +12,6 @@
   --brand-pink: #e5489a;
 }
 body { font-family: Arial, sans-serif; }
-
-/* Faded watermark logo for backgrounds */
-.watermark {
-  background-image: url('yrc-logo.jpg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 300px;
-  opacity: 0.1;
-}
 </style>
 </head>
 
@@ -53,7 +44,7 @@ body { font-family: Arial, sans-serif; }
 </header>
 
 <!-- HERO SECTION -->
-<section class="bg-[var(--brand-blue)] text-white py-20 px-6 watermark">
+<section class="bg-[var(--brand-blue)] text-white py-20 px-6">
   <div class="container mx-auto text-center max-w-3xl">
     <h2 class="text-5xl font-extrabold mb-6">Proper Yorkshire Support Delivered With Heart</h2>
     <p class="text-xl mb-8">
@@ -68,27 +59,26 @@ body { font-family: Arial, sans-serif; }
 
 <!-- ABOUT US -->
 <section id="about" class="container mx-auto px-6 py-20">
-  <div class="bg-[var(--brand-pink)] text-white p-10 rounded-2xl shadow-lg leading-relaxed watermark">
+  <div class="bg-[var(--brand-pink)] text-white p-10 rounded-2xl shadow-lg leading-relaxed">
 
     <h2 class="text-4xl font-bold mb-6 flex items-center justify-center">
-      <img src="yrc-logo.jpg" class="h-10 mr-3 opacity-80"> About Us
+      <img src="yrc-logo.jpg" class="h-10 mr-3 opacity-90"> About Us
     </h2>
 
     <p class="text-lg mb-4">
       Yorkshire Rose Care was founded to bring genuine Yorkshire values into the care sector.
-      Compassion, resilience, honesty and community spirit shape everything we do. We believe
-      in providing care that feels personal, warm and grounded in respect and dignity.
+      Compassion, resilience, honesty and community spirit shape everything we do. Our service is built
+      on forming meaningful relationships and empowering people to take steps toward independence.
     </p>
 
     <p class="text-lg mb-4">
-      Working across West Yorkshire, we support adults with mental health needs and learning
-      disabilities to live independently, safely and confidently. Our staff are highly skilled,
-      trauma-informed and trained to deliver personalised support that adapts to each individual.
+      We support adults with mental health needs and learning disabilities across West Yorkshire,
+      offering tailored care designed to promote wellbeing, confidence and stability. Everything we do
+      is person centred, strengths based and focused on helping people live safely and independently.
     </p>
 
     <p class="text-lg">
-      We are proud to make a positive difference every day and proud to serve the people 
-      and communities of Yorkshire.
+      We are proud of the lives we help transform and proud to serve the communities of Yorkshire.
     </p>
 
   </div>
@@ -99,7 +89,7 @@ body { font-family: Arial, sans-serif; }
   <div class="container mx-auto">
 
     <h2 class="text-4xl font-bold text-center mb-12 text-[var(--brand-blue)] flex justify-center items-center">
-      <img src="yrc-logo.jpg" class="h-10 mr-3 opacity-70"> Our Values
+      <img src="yrc-logo.jpg" class="h-10 mr-3 opacity-80"> Our Values
     </h2>
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
@@ -124,11 +114,11 @@ body { font-family: Arial, sans-serif; }
 </section>
 
 <!-- SERVICES -->
-<section id="services" class="bg-[var(--brand-blue)] py-20 px-6 text-white watermark">
+<section id="services" class="bg-[var(--brand-blue)] py-20 px-6 text-white">
   <div class="container mx-auto">
 
     <h2 class="text-4xl font-bold text-center mb-12 flex justify-center items-center">
-      <img src="yrc-logo.jpg" class="h-10 mr-3 opacity-70"> What We Offer
+      <img src="yrc-logo.jpg" class="h-10 mr-3 opacity-80"> What We Offer
     </h2>
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
@@ -139,14 +129,14 @@ body { font-family: Arial, sans-serif; }
           <img src="yrc-logo.jpg" class="h-8 mr-2 opacity-70"> Domiciliary Care
         </h3>
         <p class="mb-3">
-          Our domiciliary care service supports individuals in their own homes with day to day tasks,
-          emotional reassurance and practical help. We focus on maintaining independence wherever
-          possible, encouraging choice, control and confidence in everyday living.
+          Our domiciliary care service provides personalised support to individuals who wish to remain in
+          their own homes while receiving the help they need. We promote independence wherever possible,
+          building routines that empower people to develop confidence and daily living skills.
         </p>
         <p>
-          Support can include assistance with routines, medication prompts, personal care, meal
-          preparation and companionship. All care is person centred and designed to promote wellbeing,
-          dignity and meaningful progress toward individual goals.
+          Support may include assistance with personal care, medication prompts, meal preparation,
+          wellbeing support, emotional reassurance and help with maintaining a healthy home environment.
+          Every care plan is created collaboratively, focusing on dignity, respect and positive outcomes.
         </p>
       </div>
 
@@ -156,14 +146,14 @@ body { font-family: Arial, sans-serif; }
           <img src="yrc-logo.jpg" class="h-8 mr-2 opacity-70"> Supported Living
         </h3>
         <p class="mb-3">
-          Our supported living service empowers individuals to live independently in a home of their own.
-          We provide structured, consistent support that enables people to develop life skills, improve
-          confidence and build meaningful connections within their community.
+          Our supported living service helps individuals live independently while receiving structured
+          support tailored to their needs. We encourage choice, stability and personal growth, ensuring
+          people feel safe, supported and in control of their lives.
         </p>
         <p>
-          Support may include tenancy sustainment, budgeting skills, managing appointments, accessing
-          activities, community integration and emotional support. Our goal is to create a safe, stable
-          environment where individuals can thrive with the right level of care.
+          This includes tenancy support, managing daily tasks, budgeting, attending appointments,
+          developing life skills and taking an active role in the community. Our aim is to help people
+          build meaningful connections and work towards long term independence.
         </p>
       </div>
 
@@ -173,14 +163,14 @@ body { font-family: Arial, sans-serif; }
           <img src="yrc-logo.jpg" class="h-8 mr-2 opacity-70"> Specialist Support
         </h3>
         <p class="mb-3">
-          Our specialist support focuses on mental health, learning disabilities and complex needs.
-          We use a compassionate, trauma informed approach designed to promote recovery, wellbeing
-          and independence.
+          Our specialist support service is designed for individuals with mental health needs, learning
+          disabilities and more complex challenges. We deliver compassionate, trauma informed care that
+          promotes resilience, self awareness and wellbeing.
         </p>
         <p>
-          This includes emotional regulation support, coping strategies, community access,
-          communication development, confidence building and personalised outcomes based work.
-          Every support plan is shaped around the person's strengths, aspirations and needs.
+          This support may include emotional regulation work, community engagement, confidence building,
+          communication development, coping strategies and structured planning for personal goals. Every
+          care plan focuses on strengths, empowerment and sustainable progress.
         </p>
       </div>
 
@@ -193,7 +183,7 @@ body { font-family: Arial, sans-serif; }
   <div class="container mx-auto max-w-5xl text-center">
 
     <h2 class="text-4xl font-bold text-[var(--brand-blue)] mb-12 flex justify-center items-center">
-      <img src="yrc-logo.jpg" class="h-10 mr-3 opacity-70"> Testimonials
+      <img src="yrc-logo.jpg" class="h-10 mr-3 opacity-80"> Testimonials
     </h2>
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
@@ -249,7 +239,7 @@ body { font-family: Arial, sans-serif; }
 <!-- PARTNERS -->
 <section id="partners" class="container mx-auto px-6 py-20">
   <h2 class="text-4xl font-bold text-[var(--brand-blue)] text-center mb-12 flex justify-center items-center">
-    <img src="yrc-logo.jpg" class="h-10 mr-3 opacity-70"> Our Partners
+    <img src="yrc-logo.jpg" class="h-10 mr-3 opacity-80"> Our Partners
   </h2>
 
   <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
@@ -288,11 +278,11 @@ body { font-family: Arial, sans-serif; }
 </section>
 
 <!-- CONTACT -->
-<section id="contact" class="bg-[var(--brand-pink)] py-20 px-6 text-white watermark">
+<section id="contact" class="bg-[var(--brand-pink)] py-20 px-6 text-white">
   <div class="container mx-auto max-w-3xl">
 
     <h2 class="text-4xl font-bold text-center mb-10 flex justify-center items-center">
-      <img src="yrc-logo.jpg" class="h-10 mr-3 opacity-70"> Contact Us
+      <img src="yrc-logo.jpg" class="h-10 mr-3 opacity-90"> Contact Us
     </h2>
 
     <form action="https://formspree.io/f/xnnegodr" method="POST"
