--- a/index.html
+++ b/index.html
@@ -61,20 +61,17 @@ body { font-family: Arial, sans-serif; }
 <section id="about" class="container mx-auto px-6 py-20">
   <div class="bg-[var(--brand-pink)] text-white p-10 rounded-2xl shadow-lg leading-relaxed">
 
-    <h2 class="text-4xl font-bold mb-6 flex items-center justify-center">
-      <img src="yrc-logo.jpg" class="h-10 mr-3 opacity-90"> About Us
-    </h2>
+    <h2 class="text-4xl font-bold mb-6 text-center">About Us</h2>
 
     <p class="text-lg mb-4">
       Yorkshire Rose Care was founded to bring genuine Yorkshire values into the care sector.
-      Compassion, resilience, honesty and community spirit shape everything we do. Our service is built
-      on forming meaningful relationships and empowering people to take steps toward independence.
+      Compassion, resilience, honesty and community spirit shape everything we do.
     </p>
 
     <p class="text-lg mb-4">
-      We support adults with mental health needs and learning disabilities across West Yorkshire,
-      offering tailored care designed to promote wellbeing, confidence and stability. Everything we do
-      is person centred, strengths based and focused on helping people live safely and independently.
+      We support adults with mental health needs and learning disabilities across West Yorkshire.
+      Our service focuses on helping people live independently, safely and confidently, with support
+      tailored to their individual needs and goals.
     </p>
 
     <p class="text-lg">
@@ -88,9 +85,7 @@ body { font-family: Arial, sans-serif; }
 <section id="values" class="bg-white py-20 px-6">
   <div class="container mx-auto">
 
-    <h2 class="text-4xl font-bold text-center mb-12 text-[var(--brand-blue)] flex justify-center items-center">
-      <img src="yrc-logo.jpg" class="h-10 mr-3 opacity-80"> Our Values
-    </h2>
+    <h2 class="text-4xl font-bold text-center mb-12 text-[var(--brand-blue)]">Our Values</h2>
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
 
@@ -117,17 +112,13 @@ body { font-family: Arial, sans-serif; }
 <section id="services" class="bg-[var(--brand-blue)] py-20 px-6 text-white">
   <div class="container mx-auto">
 
-    <h2 class="text-4xl font-bold text-center mb-12 flex justify-center items-center">
-      <img src="yrc-logo.jpg" class="h-10 mr-3 opacity-80"> What We Offer
-    </h2>
+    <h2 class="text-4xl font-bold text-center mb-12">What We Offer</h2>
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
 
       <!-- DOMICILIARY CARE -->
       <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-xl border-4 border-[var(--brand-pink)]">
-        <h3 class="text-2xl font-bold text-[var(--brand-blue)] mb-4 flex items-center">
-          <img src="yrc-logo.jpg" class="h-8 mr-2 opacity-70"> Domiciliary Care
-        </h3>
+        <h3 class="text-2xl font-bold text-[var(--brand-blue)] mb-4">Domiciliary Care</h3>
         <p class="mb-3">
           Our domiciliary care service provides personalised support to individuals who wish to remain in
           their own homes while receiving the help they need. We promote independence wherever possible,
@@ -135,42 +126,38 @@ body { font-family: Arial, sans-serif; }
         </p>
         <p>
           Support may include assistance with personal care, medication prompts, meal preparation,
-          wellbeing support, emotional reassurance and help with maintaining a healthy home environment.
-          Every care plan is created collaboratively, focusing on dignity, respect and positive outcomes.
+          wellbeing support, emotional reassurance and maintaining a healthy home environment. Every care
+          plan is designed collaboratively to prioritise dignity, respect and positive outcomes.
         </p>
       </div>
 
       <!-- SUPPORTED LIVING -->
       <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-xl border-4 border-[var(--brand-pink)]">
-        <h3 class="text-2xl font-bold text-[var(--brand-blue)] mb-4 flex items-center">
-          <img src="yrc-logo.jpg" class="h-8 mr-2 opacity-70"> Supported Living
-        </h3>
+        <h3 class="text-2xl font-bold text-[var(--brand-blue)] mb-4">Supported Living</h3>
         <p class="mb-3">
-          Our supported living service helps individuals live independently while receiving structured
-          support tailored to their needs. We encourage choice, stability and personal growth, ensuring
-          people feel safe, supported and in control of their lives.
+          Our supported living provision enables individuals to live independently while receiving tailored,
+          structured support. We focus on building confidence, life skills and meaningful community
+          connections, ensuring each person has control over their environment and choices.
         </p>
         <p>
-          This includes tenancy support, managing daily tasks, budgeting, attending appointments,
-          developing life skills and taking an active role in the community. Our aim is to help people
-          build meaningful connections and work towards long term independence.
+          Support includes tenancy sustainment, budgeting, attending appointments, developing daily living
+          skills and access to activities. Our aim is to provide a safe, stable and empowering environment
+          where individuals can thrive with the right support.
         </p>
       </div>
 
       <!-- SPECIALIST SUPPORT -->
       <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-xl border-4 border-[var(--brand-pink)]">
-        <h3 class="text-2xl font-bold text-[var(--brand-blue)] mb-4 flex items-center">
-          <img src="yrc-logo.jpg" class="h-8 mr-2 opacity-70"> Specialist Support
-        </h3>
+        <h3 class="text-2xl font-bold text-[var(--brand-blue)] mb-4">Specialist Support</h3>
         <p class="mb-3">
-          Our specialist support service is designed for individuals with mental health needs, learning
-          disabilities and more complex challenges. We deliver compassionate, trauma informed care that
-          promotes resilience, self awareness and wellbeing.
+          Our specialist support is designed for people with mental health needs, learning disabilities and
+          more complex challenges. We provide compassionate, trauma informed care that promotes emotional
+          regulation, wellbeing and long term independence.
         </p>
         <p>
-          This support may include emotional regulation work, community engagement, confidence building,
-          communication development, coping strategies and structured planning for personal goals. Every
-          care plan focuses on strengths, empowerment and sustainable progress.
+          This support includes recovery focused work, coping strategies, community engagement, confidence
+          building, communication development and personalised planning. Every care plan is strengths based
+          and shaped around individual aspirations.
         </p>
       </div>
 
@@ -182,9 +169,7 @@ body { font-family: Arial, sans-serif; }
 <section id="testimonials" class="bg-white py-20 px-6">
   <div class="container mx-auto max-w-5xl text-center">
 
-    <h2 class="text-4xl font-bold text-[var(--brand-blue)] mb-12 flex justify-center items-center">
-      <img src="yrc-logo.jpg" class="h-10 mr-3 opacity-80"> Testimonials
-    </h2>
+    <h2 class="text-4xl font-bold text-[var(--brand-blue)] mb-12">Testimonials</h2>
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
 
@@ -192,7 +177,7 @@ body { font-family: Arial, sans-serif; }
       <div class="bg-[var(--brand-pink)] text-white p-8 rounded-2xl shadow-xl">
         <div class="bg-white text-gray-900 p-6 rounded-xl shadow-lg relative">
           <p class="text-lg italic font-semibold">
-            "Yorkshire Rose Care changed my life. The team helped me feel confident again and supported me through some very difficult moments."
+            "Yorkshire Rose Care changed my life. The team helped me rebuild my confidence and supported me through difficult moments."
           </p>
           <div class="w-0 h-0 border-t-[20px] border-t-white border-l-[20px] border-l-transparent absolute -bottom-5 left-1/2 transform -translate-x-1/2"></div>
         </div>
@@ -203,7 +188,7 @@ body { font-family: Arial, sans-serif; }
       <div class="bg-[var(--brand-blue)] text-white p-8 rounded-2xl shadow-xl">
         <div class="bg-white text-gray-900 p-6 rounded-xl shadow-lg relative">
           <p class="text-lg italic font-semibold">
-            "The support workers are kind, patient and understanding. They treat people with dignity and always go the extra mile."
+            "The support workers are kind, patient and understanding. They always go above and beyond to help."
           </p>
           <div class="w-0 h-0 border-t-[20px] border-t-white border-l-[20px] border-l-transparent absolute -bottom-5 left-1/2 transform -translate-x-1/2"></div>
         </div>
@@ -214,7 +199,7 @@ body { font-family: Arial, sans-serif; }
       <div class="bg-[var(--brand-pink)] text-white p-8 rounded-2xl shadow-xl">
         <div class="bg-white text-gray-900 p-6 rounded-xl shadow-lg relative">
           <p class="text-lg italic font-semibold">
-            "Support that genuinely makes a difference. The team are reliable, friendly and committed to helping people improve their lives."
+            "Support that makes a real difference. The team are reliable, friendly and genuinely committed to helping people."
           </p>
           <div class="w-0 h-0 border-t-[20px] border-t-white border-l-[20px] border-l-transparent absolute -bottom-5 left-1/2 transform -translate-x-1/2"></div>
         </div>
@@ -225,7 +210,7 @@ body { font-family: Arial, sans-serif; }
       <div class="bg-[var(--brand-blue)] text-white p-8 rounded-2xl shadow-xl">
         <div class="bg-white text-gray-900 p-6 rounded-xl shadow-lg relative">
           <p class="text-lg italic font-semibold">
-            "I feel safe and supported. Yorkshire Rose Care listen to me and help me take small steps toward independence."
+            "I feel safe and supported. Yorkshire Rose Care listen to me and help me take positive steps every day."
           </p>
           <div class="w-0 h-0 border-t-[20px] border-t-white border-l-[20px] border-l-transparent absolute -bottom-5 left-1/2 transform -translate-x-1/2"></div>
         </div>
@@ -238,9 +223,14 @@ body { font-family: Arial, sans-serif; }
 
 <!-- PARTNERS -->
 <section id="partners" class="container mx-auto px-6 py-20">
-  <h2 class="text-4xl font-bold text-[var(--brand-blue)] text-center mb-12 flex justify-center items-center">
-    <img src="yrc-logo.jpg" class="h-10 mr-3 opacity-80"> Our Partners
-  </h2>
+  <h2 class="text-4xl font-bold text-[var(--brand-blue)] text-center mb-8">Our Partners</h2>
+
+  <p class="text-center max-w-4xl mx-auto text-lg mb-12 text-gray-700">
+    We are proud to work alongside organisations that share our commitment to improving mental health,
+    reducing stigma, promoting inclusion and strengthening our communities. These partnerships help us
+    connect people with support networks, charitable initiatives and community opportunities that make a
+    real difference across West Yorkshire.
+  </p>
 
   <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
 
@@ -266,7 +256,7 @@ body { font-family: Arial, sans-serif; }
 
     <a href="https://andysmanclub.co.uk" target="_blank"
        class="p-8 rounded-2xl bg-[var(--brand-pink)] text-white font-bold text-xl shadow-xl text-center">
-       Andy's Man Club
+       Andy’s Man Club
     </a>
 
     <a href="https://www.premierleague.com/communities" target="_blank"
@@ -281,9 +271,7 @@ body { font-family: Arial, sans-serif; }
 <section id="contact" class="bg-[var(--brand-pink)] py-20 px-6 text-white">
   <div class="container mx-auto max-w-3xl">
 
-    <h2 class="text-4xl font-bold text-center mb-10 flex justify-center items-center">
-      <img src="yrc-logo.jpg" class="h-10 mr-3 opacity-90"> Contact Us
-    </h2>
+    <h2 class="text-4xl font-bold text-center mb-10">Contact Us</h2>
 
     <form action="https://formspree.io/f/xnnegodr" method="POST"
           class="bg-white text-gray-900 p-8 rounded-2xl shadow-xl border-4 border-[var(--brand-blue)]">
